--- a/index.html
+++ b/index.html
@@ -2,9 +2,27 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title></title>
+	<title> 5 HOMEWORK</title>
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/fonts.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+	<header class="header-wraper">
+	  <div>
+		<a class="logo" href="index.html"> LOGO</a>
+		<nav class="navigation">
+			<ul> 
+				<li class="nav-li-home"> <a class="nav active" href="index.html"> HOME</a> </li>
+				<li class="nav-li"> <a class="nav" href="#">DISCOVERY</a></li>
+				<li class="nav-li"> <a class="nav" href="#">PHOTOS </a></li>
+				<li class="nav-li"> <a class="nav" href="#"> CONTACT </a></li>
+			</ul>
+		</nav>
+		<div class="header-img"> <img src="images/christ.svg" alt="header-photo"> </div>
+	  </div>
+		
+	</header>
 
 </body>
 </html>
