--- a/index.html
+++ b/index.html
@@ -23,6 +23,55 @@
 	  </div>
 		
 	</header>
+	<section> 
+	    <div class="div-box"> 
+	     <h2 class="h2first">TRENDING</h2>
+		 <div class="image-wraper">
+		   <img src="images/1.png" alt="image1" > 
+		   <p class="text-image"> Dolore magna aliqua</p> 
+		   <p class="text-image2">Lorem ipsum dolor sit amet, ipsum labitur </p>
+		   <p class="text-image3">ucilius mel id, ad has appareat.</p>
+	       <div class="text-image4">
+		      <img src="images/time.svg" alt="img-clock">
+		      <p class="p-img"> 2m ago </p> 
+		   </div> 
+		  </div><!--
+		  --><div class="image-wraper-center"> 
+		   	<img src="images/2.png" alt="image2" > 
+		    <p class="text-image">Morbi eleifend a libero</p>
+		    <p class="text-image2">Lorem ipsum dolor sit amet, ipsum labitur </p>
+		    <p class="text-image3">ucilius mel id, ad has appareat.</p>
+		    <div class="text-image4">
+		      <img src="images/time.svg" alt="img-clock">
+		      <p class="p-img"> 1h ago </p> 
+		    </div>
+		  </div><!--
+         
+       --><div class="image-wraper"> 
+		  	<img src="images/3.png" alt="image3" > 
+		    <p class="text-image">Morbi eleifend a libero</p>
+		    <p class="text-image2">Lorem ipsum dolor sit amet, ipsum labitur </p>
+		    <p class="text-image3">ucilius mel id, ad has appareat.</p>
+		    <div class="text-image4">
+		  	  <img src="images/time.svg" alt="img-clock">
+		      <p class="p-img"> 2h ago </p> 
+		    </div>
+	   </div> 
+
+    </section>
+
+	<section>
+        <div>
+		  <h2> HAPPENING NOW</h2>
+		  <img src="images/4.png" alt="image4">
+		  <img src="images/5.png" alt="image5">
+		</div>
+	   <div> 
+		<img src="images/6.png" alt="image6">
+		<img src="images/7.png" alt="image7">
+		<img src="images/8.png" alt="image8">
+	   </div>
+	</section>
 
 </body>
 </html>
