add to section 2

--- a/index.html
+++ b/index.html
@@ -61,17 +61,23 @@
     </section>
 
 	<section>
-        <div>
-		  <h2> HAPPENING NOW</h2>
-		  <img src="images/4.png" alt="image4">
+	   <div class=container-block>
+	   	<h2 class="divh2"> HAPPENING NOW</h2>
+          <div class="right-block">
+		  <img class="img-top"src="images/4.png" alt="image4">
 		  <img src="images/5.png" alt="image5">
-		</div>
-	   <div> 
+		</div><!--
+
+	   --><div class="left-block"> 
 		<img src="images/6.png" alt="image6">
-		<img src="images/7.png" alt="image7">
+		<img class= "img-middle"src="images/7.png" alt="image7">
 		<img src="images/8.png" alt="image8">
 	   </div>
+	  </div>
 	</section>
+	<footer>
+   
+	</footer>
 
 </body>
 </html>
