--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </section>
 
 	<section>
-	   <div class=container-block>
+	   <div class= "container-block">
 	   	<h2 class="divh2"> HAPPENING NOW</h2>
           <div class="right-block">
 		  <img class="img-top"src="images/4.png" alt="image4">
@@ -75,7 +75,54 @@
 	   </div>
 	  </div>
 	</section>
-	<footer>
+	<footer class="footer-bg">  
+		<div class= "container-block">
+
+			<div class="block1">
+			   <a class="logo-2" href="index.html"> LOGO</a>
+			</div><!--
+
+			--><div class="block2">
+				<nav class="navigation-2">
+			       <ul> 
+				     <li class="nav-2"> <a class="nav2" href="index.html"> Home</a> </li>
+				     <li class="nav-2-padding" > <a class="nav2" href="#">Discovery</a></li>
+				     <li class="nav-2-padding2"> <a class="nav2" href="#">Photos </a></li>
+				     <li class="nav-2"> <a class="nav2" href="#"> Contact </a></li>
+			      </ul>
+		      </nav>
+			</div><!--
+
+			--><div class="block3">
+				<ul>
+					<li class="list1">About</li>
+					<li class="list1-padding">Help </li>
+					<li class="list1-padding2">Terms</li>
+					<li class="list1">Guidlines</li>
+				</ul>
+			</div><!--
+
+			--><div class="block4">
+				<ul>
+					<li class="list2">Testimonials</li>
+					<li class="list2-padding">Advertise</li>
+					<li class="list2-padding2">Integrations</li>
+					<li class="list2">Careers</li>
+				</ul>
+			</div><!--
+
+			--><div class="block5">
+				<p class="block5-p"> Stay in touch with us for the freshest products!</p>
+			</div><!--
+
+		    --><div class="block6">
+				<img src="images/inst.svg" alt="instagram-icon">
+				<div class="twit-img"><img src="images/twit.svg" alt="twitter-icon"></div><!--
+			 --><div class="fb-img"><img src="images/fb.svg" alt="facebook-icon"></div>
+				<img src="images/web.svg" alt="web-icon">
+			</div>
+			
+		</div>
    
 	</footer>
 
